clusters/main/kubernetes/apps/grafana/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
  annotations:
    gethomepage.dev/enabled: true
    gethomepage.dev/group: Home Automation
    gethomepage.dev/href: https://grafana.${DOMAIN_0}/
    gethomepage.dev/icon: https://trueforge.org/img/hotlink-ok/chart-icons/grafana.webp
    gethomepage.dev/name: grafana
    gethomepage.dev/instance: "internal"
    gethomepage.dev/widget.type: grafana
    gethomepage.dev/widget.password: testpassword
    gethomepage.dev/widget.url: http://grafana.grafana.svc:3000
    gethomepage.dev/widget.username: admin
    gethomepage.dev/widget.version: 2
    gethomepage.dev/description: Grafana is an open source, feature rich metrics dashboard and graph editor for Graphite, Elasticsearch, OpenTSDB, Prometheus and InfluxDB.
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy
      sectionName: https
  hostnames:
    - "grafana.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: grafana
          port: 3000
